error messages concerning the user account now look sth like this: An error occurred when ... in the following user account: User name: <username>, Server name: <server>.
i18n messages now allow more than one parameter to be set


git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2341 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -6,16 +6,16 @@ accounts=Accounts
 activateOnlyWhenMinimized=Activate only when minimized
 add=&Add
 addContact=&Add contact
-addContactError=Failed to add contact with id: ?
+addContactError=Failed to add contact with id: {0}
 addContactErrorTitle=Add contact Error
-addContactExistError=The contact ? already exists in your contact list.
+addContactExistError=The contact {0} already exists in your contact list.
 addContactIdentifier=In the field below enter the identifier of the contact you would like to add.
 addContactWizard=Add contact wizard
-addGroupLocalError=Failed to add group with name: ?. The problem occured during a local IO operation.
-addGroupNetError=Failed to add group with name: ?. The problem occured due to a network failure. Please check your network connection and try again.
-addGroupError=Failed to add group with name: ?.
+addGroupLocalError=Failed to add group with name: {0}. The problem occured during a local IO operation.
+addGroupNetError=Failed to add group with name: {0}. The problem occured due to a network failure. Please check your network connection and try again.
+addGroupError=Failed to add group with name: {0}.
 addGroupErrorTitle=Add group Error
-addGroupExistError=The group ? already exists in your contact list.
+addGroupExistError=The group {0} already exists in your contact list.
 addSubcontact=&Add subcontact
 all=&All
 allContacts=&All contacts
@@ -27,8 +27,8 @@ authAccepted=contact has accepted your authorization request.
 authenticationWindowTitle=Authentication requested
 authRejected=contact has rejected your authorization request.
 authorizationRequested=Authorization requested
-authorizationRequestedInfo=The ? contact requests your authorization.
-authenticationFailed=The authentication for account ? failed. The password you entered is not valid.
+authorizationRequestedInfo=The {0} contact requests your authorization.
+authenticationFailed=The authentication failed for the following account: User name: {0}, Server name: {1}. The password you entered is not valid.
 authorizationResponse=Authorization response
 autoPopup=Bring window to front
 back=&Back 
@@ -42,11 +42,11 @@ conference=Conference
 configure=&Configure
 configuration=Configuration
 connectionFailed=Connection failed
-connectionFailedMessage=Connection for account ? failed.
-connectionExpiredMessage=You are currently disconnected from the ? server.
-contactNotSupportingTelephony=The choosen  ? contact doesn't support telephony.
-contactPausedTyping=? paused typing the message
-contactTyping=? is typing a message
+connectionFailedMessage=Connection failed for the following account: User name: {0}, Server name: {1}.
+connectionExpiredMessage=You are currently disconnected from the {0} server.
+contactNotSupportingTelephony=The choosen  {0} contact doesn't support telephony.
+contactPausedTyping={0} paused typing the message
+contactTyping={0} is typing a message
 contactTypingStateStale=typing state not updated
 contacts=Contacts
 continue=&Continue
@@ -80,7 +80,7 @@ font=Font
 help=?
 hideCallPanel=&Hide call panel
 history=&History
-historyContact=History - ?
+historyContact=History - {0}
 hour=Hour
 identifier=Identifier
 ignore=Ignore
@@ -89,11 +89,11 @@ invalidCall=Invalid call
 last=Last
 launchBrowserError=Error attempting to launch web browser.
 launchOnStartUp=Launch on start up
-limitReachedForIp=You have too many existing registrations from the local IP address and the ? server doesn't allow to open any more of them.
+limitReachedForIp=You have too many existing registrations from the local IP address and the {0} server doesn't allow to open any more of them.
 login=&Login
-loginNotSucceeded=An error occured while logging in with ? account.
-loginWindowTitle=Login ?
-logoffNotSucceeded=An error occured while logging off with ? account.
+loginNotSucceeded=An error occured while logging in with the following account: User name: {0}, Server name: {1}.
+loginWindowTitle=Login {0}
+logoffNotSucceeded=An error occured while logging off with the following account: User name: {0}, Server name: {1}.
 me=me
 modify=&Modify
 moveSubcontactMsg=Select the contact, where you would like to move.
@@ -105,7 +105,7 @@ msgDeliveryOfflineNotSupported=The protocol you are using doesn't support offlin
 msgDeliveryInternalError=An internal error occured. This is most probably a bug. Please report it here: http://www.sip-communicator.org/index.php/Development/BugsAndIssues
 msgNotDelivered=A network problem occured.
 msgSendConnectionProblem=You should be connected to be able to send messages.
-multipleLogins=You have logged in more than once with the same account. ? account is currently disconnected.
+multipleLogins=You have logged in more than once with the same account. The following account: User name: {0}, Server name: {1} is currently disconnected.
 name=Name 
 networkFailure=Network failure
 next=&Next
@@ -115,7 +115,7 @@ newName=New name:
 no=No
 noAccountFound=In order to use the SIP-Communicator you need at least one registered account. The following pages will guide you through the process of creating an account.
 nonEmptyChatWindowClose=You're trying to close a chat with a non-sent message. Are you sure you want to close this chat?
-nonExistingUserId=The ? server does not recognize specified user id.
+nonExistingUserId=The {0} server does not recognize specified user id.
 notifications=Notifications
 ok=&OK
 offline=Offline
@@ -130,7 +130,7 @@ protocol=Protocol
 providerNotConnected=You must be connected to be able to communicate.
 quit=&Quit
 ready=Ready
-reconnectionLimitExceeded=You have have been disconnecting and reconnecting to the server too fast. ? account is temporarily banned and would have to wait a bit before trying to login again.
+reconnectionLimitExceeded=You have have been disconnecting and reconnecting to the server too fast. The following account: User name: {0}, Server name: {1} is temporarily banned and would have to wait a bit before trying to login again.
 refresh=Refresh
 registrationTimeout=Registration timeout:
 reject=&Reject
@@ -147,13 +147,13 @@ renameGroup=Re&name group
 renameGroupInfo=In the field below you can specify the name you would like to use for the given group.
 request=&Request
 requestAuthorization=&Request authorization
-requestAuthorizationInfo=Can't add ? to your Contact List. ? must authorize your request to add him/her. Please enter your request below.
+requestAuthorizationInfo=Can't add {0} to your Contact List. {0} must authorize your request to add him/her. Please enter your request below.
 requestAuthReason=Request reason
 requestAuthReasonEnter=Enter request reason
 responseAuthReasonEnter=Enter response reason
 save=&Save
 search=&Search
-securityAuthorityRealm=The ? server has requested your authentication. 
+securityAuthorityRealm=The {0} server has requested your authentication. 
 selectAccount=Select account
 selectAccountRegistration=From the list below select the account registration wizard to use for creating a new account.
 selectAccountRegWizardTitle=Select account registration
@@ -173,9 +173,9 @@ showCallPanel=Show call panel
 showOfflineUsers=Hide/Show offline users
 sipCommunicator=SIPCommunicator
 soundOnOff=Turn sound on/off
-statusChangedChatMessage=has become ?
-statusChangeGeneralError=Failed to change status for ? account due to a general error.
-statusChangeNetworkFailure=Failed to change status for ? account due to a network problem.
+statusChangedChatMessage=has become {0}
+statusChangeGeneralError=Failed to change status for account: User name: {0}, Server name: {1}, due to a general error.
+statusChangeNetworkFailure=Failed to change status for account: User name: {0}, Server name: {1}, due to a network problem.
 summary=Summary
 today=Today
 tools=&Tools
@@ -183,7 +183,7 @@ typeYourRequest=Type your request here
 uin=UIN:
 unknown=Unknown user
 msgDeliveryFailedUnknownError=Unknown error has occured while delivering your message.
-unregisteredMessage=Unable to connect ? account. You are currently offline.
+unregisteredMessage=Unable to connect the following account: User name: {0}, Server name: {1}. You are currently offline.
 updateAutomatically=Automatically install new updates
 updates=Updates
 userInfo=&User info
