--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -36,6 +36,9 @@ call=Call
 callVia=Call via:
 callList=Call list
 cancel=&Cancel
+chatRoomName=Chat room name
+chatRoomNameInfo=In the field below enter the name of the chat room that you would like to create.
+chatRooms=Chat rooms
 close=Cl&ose
 closeChatAfterNewMsg=You have received a new message less than 2 seconds ago. Are you sure you want to close this chat?
 conference=Conference
@@ -53,6 +56,9 @@ continue=&Continue
 copy=&Copy
 copyLink=Copy &link
 create=C&reate
+createChatRoom=&Create chat room
+createChatRoomError=Failed to create chat room with name: {0}.
+createChatRoomWizard=Create chat room wizard
 createGroup=&Create group
 createGroupName=In the field below enter the name of the group you would like to create.
 cut=C&ut
@@ -153,6 +159,7 @@ requestAuthReasonEnter=Enter request reason
 responseAuthReasonEnter=Enter response reason
 save=&Save
 search=&Search
+searchForChatRooms=&Search for chat rooms
 securityAuthorityRealm=The {0} server has requested your authentication. 
 selectAccount=Select account
 selectAccountRegistration=From the list below select the account registration wizard to use for creating a new account.
@@ -160,11 +167,11 @@ selectAccountRegWizardTitle=Select account registration
 selectGroup=Select group
 selectGroupWizard=The list below contains all groups in your Contact List. Select the one, where you would like to add the new contact.
 selectGroupWizardTitle=Select group
+selectProvidersForChatRoom=The list below contains all accounts that support the multi user chat feature. Select the one you would like to use to create your chat room.
 selectProvidersWizard=The list below contains all registered accounts. Select these one you would like to use to communicate with the new contact.
 selectProvidersWizardTitle=Select account(s)
 send=&Send
 sendFile=S&end file
-useCtrlEnterToSend=Use Ctrl-&Enter to send
 selectContactSupportingInfo=There is no info for this contact.
 sendMessage=&Send a message
 sendVia=Send via
@@ -182,6 +189,7 @@ tools=&Tools
 typeYourRequest=Type your request here
 uin=UIN:
 unknown=Unknown user
+useCtrlEnterToSend=Use Ctrl-&Enter to send
 msgDeliveryFailedUnknownError=Unknown error has occured while delivering your message.
 unregisteredMessage=Unable to connect the following account: User name: {0}, Server name: {1}. You are currently offline.
 updateAutomatically=Automatically install new updates
