join chat room for multi chat
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2494 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -38,6 +38,7 @@ callList=Call list
 cancel=&Cancel
 chatRoomName=Chat room name
 chatRoomNameInfo=In the field below enter the name of the chat room that you would like to create.
+chatRoomNotExist=The {0} room was not found in the {1} server. Please verify if the name you typed is correct.
 chatRooms=Chat rooms
 close=Cl&ose
 closeChatAfterNewMsg=You have received a new message less than 2 seconds ago. Are you sure you want to close this chat?
@@ -79,6 +80,7 @@ general=General
 generalError=General error
 group=Group
 groupName=Group name
+failedToJoinChannel=Failed to join channel {0}.
 file=&File
 finish=&Finish
 first=First
@@ -92,6 +94,7 @@ identifier=Identifier
 ignore=Ignore
 insertSmiley=Insert smiley
 invalidCall=Invalid call
+joinChatRoom=&Join chat room
 last=Last
 launchBrowserError=Error attempting to launch web browser.
 launchOnStartUp=Launch on start up
@@ -177,6 +180,7 @@ sendMessage=&Send a message
 sendVia=Send via
 settings=&Settings
 showCallPanel=Show call panel
+showChannelsList=Show channels list
 showOfflineUsers=Hide/Show offline users
 sipCommunicator=SIPCommunicator
 soundOnOff=Turn sound on/off
