find room error message added
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2529 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -82,6 +82,7 @@ group=Group
 groupName=Group name
 failedToJoinChannel=Failed to join channel {0}.
 file=&File
+findChatRoomError=Failed to find the "{0}" chat room.
 finish=&Finish
 first=First
 font=Font
