multi user chat enhancements
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2545 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -95,6 +95,7 @@ identifier=Identifier
 ignore=Ignore
 insertSmiley=Insert smiley
 invalidCall=Invalid call
+join=&Join
 joinChatRoom=&Join chat room
 last=Last
 launchBrowserError=Error attempting to launch web browser.
