--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -66,6 +66,7 @@ cut=C&ut
 date=Date
 description=Description
 dial=&Dial
+dialpad=Dialpad
 doNotAskAgain=Don't ask again
 dontSupportWebInfo=This contact doesn't support web contact info
 duration=Duration
