--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -31,15 +31,28 @@ authorizationRequestedInfo=The {0} contact requests your authorization.
 authenticationFailed=The authentication failed for the following account: User name: {0}, Server name: {1}. The password you entered is not valid.
 authorizationResponse=Authorization response
 autoPopup=Bring window to front
-back=&Back 
+back=&Back
+ban=&Ban
+banFailed=Ban failed
+banFailedGeneralError=Failed to ban {0}. A general server error occured.
+banFailedNotAllowed=Failed to ban {0}. The owner and the administratior of the room could not be banned.
+banFailedNotEnoughPermissions=Failed to ban {0}. You don't have enough privileges to do that.
 call=Call
 callVia=Call via:
 callList=Call list
 cancel=&Cancel
+chatRoomAlreadyJoined=The {0} chat room is already joined.
+chatRoomUserJoined=has joined {0}
+chatRoomUserLeft=has left {0}
+chatRoomUserKicked=has been kicked from {0}
+chatRoomUserQuit=has quit {0}
 chatRoomName=Chat room name
 chatRoomNameInfo=In the field below enter the name of the chat room that you would like to create.
 chatRoomNotExist=The {0} room was not found in the {1} server. Please verify if the name you typed is correct.
+chatRoomNotConnected=You need to be logged in in order to join the {0} chat room.
+chatRoomNotJoined=You need to be joined to the chat room in order to do further operations with it.
 chatRooms=Chat rooms
+chatRoomSubjectChanged={0} has changed the subject to {1}
 close=Cl&ose
 closeChatAfterNewMsg=You have received a new message less than 2 seconds ago. Are you sure you want to close this chat?
 conference=Conference
@@ -48,6 +61,7 @@ configuration=Configuration
 connectionFailed=Connection failed
 connectionFailedMessage=Connection failed for the following account: User name: {0}, Server name: {1}.
 connectionExpiredMessage=You are currently disconnected from the {0} server.
+contactAddress=Contact address
 contactNotSupportingTelephony=The choosen  {0} contact doesn't support telephony.
 contactPausedTyping={0} paused typing the message
 contactTyping={0} is typing a message
@@ -57,7 +71,8 @@ continue=&Continue
 copy=&Copy
 copyLink=Copy &link
 create=C&reate
-createChatRoom=&Create chat room
+createChatRoom=&Create chat room...
+createChatRoomNotSupported=Failed to create chat room with name: {0}. The server you have choosen: {1} doesn't support this operation.
 createChatRoomError=Failed to create chat room with name: {0}.
 createChatRoomWizard=Create chat room wizard
 createGroup=&Create group
@@ -81,26 +96,43 @@ general=General
 generalError=General error
 group=Group
 groupName=Group name
-failedToJoinChannel=Failed to join channel {0}.
+failedToCreateChatRoom=Failed to create chat room with name: {0}.
+failedToJoinChatRoom=Failed to join chat room with name: {0}.
 file=&File
 findChatRoomError=Failed to find the "{0}" chat room.
 finish=&Finish
 first=First
 font=Font
+haveToBeConnectedToJoin=You have to be connected in order to join a chat room. Please connect and then try again.
+haveToBeConnectedToLeave=You have to be connected in order to leave a chat room.
 help=?
 hideCallPanel=&Hide call panel
 history=&History
 historyContact=History - {0}
 hour=Hour
 identifier=Identifier
-ignore=Ignore
+ignore=&Ignore
 insertSmiley=Insert smiley
 invalidCall=Invalid call
+invitation=Invitation text
+invitationReceived=Invitation received
+invitationReceivedFormInfo={0} has invited you to join {1} chat room. You could accept, reject or ignore this invitation.
+invite=&Invite
+inviteContactFormInfo=Please write the name of the user you would like to invite. If you wish you could also precise the reason for this invitation.
+inviteContactToChat=Invite contact to chat
 join=&Join
-joinChatRoom=&Join chat room
+joinChatRoom=&Join chat room...
+joinChatRoomTitle=Join chat room
+joinChatRoomName=Please enter the name of the chat room you would like to join.
+kick=&Kick
+kickFailed=Kick failed
+kickFailedGeneralError=Failed to kick {0}. A general server error occured.
+kickFailedNotAllowed=Failed to kick {0}. The owner and the administratior of the room could not be kicked.
+kickFailedNotEnoughPermissions=Failed to kick {0}. You don't have enough privileges to do that.
 last=Last
 launchBrowserError=Error attempting to launch web browser.
 launchOnStartUp=Launch on start up
+leave=&Leave
 limitReachedForIp=You have too many existing registrations from the local IP address and the {0} server doesn't allow to open any more of them.
 login=&Login
 loginNotSucceeded=An error occured while logging in with the following account: User name: {0}, Server name: {1}.
@@ -118,7 +150,7 @@ msgDeliveryInternalError=An internal error occured. This is most probably a bug.
 msgNotDelivered=A network problem occured.
 msgSendConnectionProblem=You should be connected to be able to send messages.
 multipleLogins=You have logged in more than once with the same account. The following account: User name: {0}, Server name: {1} is currently disconnected.
-name=Name 
+name=Name
 networkFailure=Network failure
 next=&Next
 new=&New
@@ -142,6 +174,7 @@ protocol=Protocol
 providerNotConnected=You must be connected to be able to communicate.
 quit=&Quit
 ready=Ready
+reason=Reason
 reconnectionLimitExceeded=You have have been disconnecting and reconnecting to the server too fast. The following account: User name: {0}, Server name: {1} is temporarily banned and would have to wait a bit before trying to login again.
 refresh=Refresh
 registrationTimeout=Registration timeout:
@@ -166,6 +199,7 @@ responseAuthReasonEnter=Enter response reason
 save=&Save
 search=&Search
 searchForChatRooms=&Search for chat rooms
+searchForChatRoomsText=Click the below button to show all chat rooms existing in the selected server. Then select the one you would like to join and click the join button.
 securityAuthorityRealm=The {0} server has requested your authentication. 
 selectAccount=Select account
 selectAccountRegistration=From the list below select the account registration wizard to use for creating a new account.
@@ -186,6 +220,7 @@ showCallPanel=Show call panel
 showChannelsList=Show channels list
 showOfflineUsers=Hide/Show offline users
 sipCommunicator=SIPCommunicator
+specifyReason=In the field below you could specify the reason of this operation.
 soundOnOff=Turn sound on/off
 statusChangedChatMessage=has become {0}
 statusChangeGeneralError=Failed to change status for account: User name: {0}, Server name: {1}, due to a general error.
