chat room gui enhancements including authentication management and configuration form management
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2831 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -22,6 +22,7 @@ allContacts=&All contacts
 alwaysOnTop=Always on top
 appearance=Appearance
 application=Application
+apply=&Apply
 at=at
 authAccepted=contact has accepted your authorization request.
 authenticationWindowTitle=Authentication requested
@@ -42,6 +43,10 @@ callVia=Call via:
 callList=Call list
 cancel=&Cancel
 chatRoomAlreadyJoined=The {0} chat room is already joined.
+chatRoomConfiguration={0} chat room configuration
+chatRoomOpenConfigFailed=Failed to obtain the {0} chat room configuration form.
+chatRoomOpenConfigForbidden=Could not obtain the {0} chat room configuration form. Only administrators of the chat room could see and change the configuration form.
+chatRoomConfigFormSubmitFailed=An error occured while trying to submit the configuration form for chat room {0}. 
 chatRoomUserJoined=has joined {0}
 chatRoomUserLeft=has left {0}
 chatRoomUserKicked=has been kicked from {0}
@@ -51,6 +56,9 @@ chatRoomNameInfo=In the field below enter the name of the chat room that you wou
 chatRoomNotExist=The {0} room was not found in the {1} server. Please verify if the name you typed is correct.
 chatRoomNotConnected=You need to be logged in in order to join the {0} chat room.
 chatRoomNotJoined=You need to be joined to the chat room in order to do further operations with it.
+chatRoomOptions=Chat room options
+chatRoomRegistrationRequired=The {0} chat room requires registration to be joined.
+chatRoomRequiresPassword=The {0} chat room has requested a password.
 chatRooms=Chat rooms
 chatRoomSubjectChanged={0} has changed the subject to {1}
 close=Cl&ose
@@ -121,6 +129,7 @@ invite=&Invite
 inviteContactFormInfo=Please write the name of the user you would like to invite. If you wish you could also precise the reason for this invitation.
 inviteContactToChat=Invite contact to chat
 join=&Join
+joinAs=J&oin as
 joinChatRoom=&Join chat room...
 joinChatRoomTitle=Join chat room
 joinChatRoomName=Please enter the name of the chat room you would like to join.
@@ -166,6 +175,7 @@ offline=Offline
 olderCalls=Older calls
 online=Online
 openInBrowser=Open in &browser
+options=Options
 passwd=Password:
 paste=&Paste
 previous=Previous
@@ -225,6 +235,7 @@ soundOnOff=Turn sound on/off
 statusChangedChatMessage=has become {0}
 statusChangeGeneralError=Failed to change status for account: User name: {0}, Server name: {1}, due to a general error.
 statusChangeNetworkFailure=Failed to change status for account: User name: {0}, Server name: {1}, due to a network problem.
+subject=Subject
 summary=Summary
 today=Today
 tools=&Tools
