--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -1,3 +1,30 @@
+# SIP Communicator, the OpenSource Java VoIP and Instant Messaging client.
+#
+# Distributable under LGPL license.
+# See terms of license at gnu.org.
+
+# Note to translators:
+# To translate SIP Communicator to your language
+# - copy messages.properties to messages_xx.properties
+#   (where xx is the ISO 639-1 language code of your language)
+# - the file must use UTF-8 encoding
+# - all entries are of the form key=translation, where only the
+#   translation part has to be changed
+# - {0}, {1}... are parameters which will be replaced by the
+#   actual text at runtime, place them as you wish
+# - you don't have to translate all entries, if an entry is not
+#   found in your translation, the text in messages.properties will
+#   be used
+# - \ at the end of a line means that the translation is continued
+#   in the next line
+#
+# To start SIP Communicator with a language that is different
+# from your system's language, pass the language code to ant:
+# ant -Duser.language=xx run
+#
+# The same rules apply to the properties files found in the other
+# directories.
+
 about=&About
 accept=&Accept
 account=Account
@@ -46,7 +73,7 @@ chatRoomAlreadyJoined=The {0} chat room is already joined.
 chatRoomConfiguration={0} chat room configuration
 chatRoomOpenConfigFailed=Failed to obtain the {0} chat room configuration form.
 chatRoomOpenConfigForbidden=Could not obtain the {0} chat room configuration form. Only administrators of the chat room could see and change the configuration form.
-chatRoomConfigFormSubmitFailed=An error occured while trying to submit the configuration form for chat room {0}. 
+chatRoomConfigFormSubmitFailed=An error occured while trying to submit the configuration form for chat room {0}.
 chatRoomUserJoined=has joined {0}
 chatRoomUserLeft=has left {0}
 chatRoomUserKicked=has been kicked from {0}
@@ -210,7 +237,7 @@ save=&Save
 search=&Search
 searchForChatRooms=&Search for chat rooms
 searchForChatRoomsText=Click the below button to show all chat rooms existing in the selected server. Then select the one you would like to join and click the join button.
-securityAuthorityRealm=The {0} server has requested your authentication. 
+securityAuthorityRealm=The {0} server has requested your authentication.
 selectAccount=Select account
 selectAccountRegistration=From the list below select the account registration wizard to use for creating a new account.
 selectAccountRegWizardTitle=Select account registration
