--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -195,6 +195,7 @@ newAccount=&New account
 newName=New name:
 no=No
 noAccountFound=In order to use the SIP-Communicator you need at least one registered account. The following pages will guide you through the process of creating an account.
+noAvailableRooms=No available rooms on this server.
 nonEmptyChatWindowClose=You're trying to close a chat with a non-sent message. Are you sure you want to close this chat?
 nonExistingUserId=The {0} server does not recognize specified user id.
 notifications=Notifications
