Fixed initial chat room join and some fixes for correct presentation of system rooms in the gui
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3031 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -195,7 +195,7 @@ newAccount=&New account
 newName=New name:
 no=No
 noAccountFound=In order to use the SIP-Communicator you need at least one registered account. The following pages will guide you through the process of creating an account.
-noAvailableRooms=No available rooms on this server.
+noAvailableRooms=The list of rooms for this server is currently not available.
 nonEmptyChatWindowClose=You're trying to close a chat with a non-sent message. Are you sure you want to close this chat?
 nonExistingUserId=The {0} server does not recognize specified user id.
 notifications=Notifications
