Do not allow non multi user chat accounts to appear in the create chat room wizard.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3063 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -160,6 +160,7 @@ joinAs=J&oin as
 joinChatRoom=&Join chat room...
 joinChatRoomTitle=Join chat room
 joinChatRoomName=Please enter the name of the chat room you would like to join.
+joinChatRoomWizard=Join chat room wizard
 kick=&Kick
 kickFailed=Kick failed
 kickFailedGeneralError=Failed to kick {0}. A general server error occured.
@@ -196,6 +197,7 @@ newName=New name:
 no=No
 noAccountFound=In order to use the SIP-Communicator you need at least one registered account. The following pages will guide you through the process of creating an account.
 noAvailableRooms=The list of rooms for this server is currently not available.
+noMultiChatAccountAvailable=No accounts, supporting multi user chat found. Check sip-communicator.org for more information on which protocols support multi user chat.
 nonEmptyChatWindowClose=You're trying to close a chat with a non-sent message. Are you sure you want to close this chat?
 nonExistingUserId=The {0} server does not recognize specified user id.
 notifications=Notifications
