German can also have the special systray macosx icon.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3130 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/systray/resources_de.properties
+++ b/src/net/java/sip/communicator/impl/systray/resources_de.properties
@@ -8,6 +8,7 @@
 trayIcon=net/java/sip/communicator/impl/systray/resources/systrayIcon.png
 trayIconWindows=net/java/sip/communicator/impl/systray/resources/systrayIconWindows.png
 trayIconWindowsAnimated=net/java/sip/communicator/impl/systray/resources/systrayIconWindows.gif
+trayIconMacOSX=net/java/sip/communicator/impl/systray/resources/systrayIconMacOSX.png
 addContactIcon=net/java/sip/communicator/impl/systray/resources/addContactIcon.png
 statusMenuIcon=net/java/sip/communicator/impl/systray/resources/statusIcon.png
 settingsMenuIcon=net/java/sip/communicator/impl/systray/resources/configureIcon.png
