--- a/src/net/java/sip/communicator/impl/systray/resources_de.properties
+++ b/src/net/java/sip/communicator/impl/systray/resources_de.properties
@@ -17,6 +17,8 @@ closeMenuIcon=net/java/sip/communicator/impl/systray/resources/quit.png
 sipLogo=net/java/sip/communicator/impl/systray/resources/sipLogo.png
 sipLogoOffline=net/java/sip/communicator/impl/systray/resources/sipLogoOffline.png
 messageIcon=net/java/sip/communicator/impl/systray/resources/envelope.png
+messageIconMacOSX=net/java/sip/communicator/impl/systray/resources/envelopeMacOSX.png
+messageIconMacOSXWhite=net/java/sip/communicator/impl/systray/resources/envelopeMacOSXWhite.png
 settings=Einstellungen...
 addContact=Kontakt hinzufügen...
 setStatus=Status
