German properties were lacking the path to the messageIconWindows property.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3149 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/systray/resources_de.properties
+++ b/src/net/java/sip/communicator/impl/systray/resources_de.properties
@@ -17,6 +17,7 @@ closeMenuIcon=net/java/sip/communicator/impl/systray/resources/quit.png
 sipLogo=net/java/sip/communicator/impl/systray/resources/sipLogo.png
 sipLogoOffline=net/java/sip/communicator/impl/systray/resources/sipLogoOffline.png
 messageIcon=net/java/sip/communicator/impl/systray/resources/envelope.png
+messageIconWindows=net/java/sip/communicator/impl/systray/resources/envelope.png
 messageIconMacOSX=net/java/sip/communicator/impl/systray/resources/envelopeMacOSX.png
 messageIconMacOSXWhite=net/java/sip/communicator/impl/systray/resources/envelopeMacOSXWhite.png
 settings=Einstellungen...
