--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -59,6 +59,7 @@ authorizationRequestedInfo=The {0} contact requests your authorization.
 authenticationFailed=The authentication failed for the following account: User name: {0}, Server name: {1}. The password you entered is not valid.
 authorizationResponse=Authorization response
 autoPopup=Bring window to front
+awayStatus=Away
 back=&Back
 ban=&Ban
 banFailed=Ban failed
@@ -117,6 +118,7 @@ date=Date
 description=Description
 dial=&Dial
 dialpad=Dialpad
+dndStatus=Do not disturb
 doNotAskAgain=Don't ask again
 dontSupportWebInfo=This contact doesn't support web contact info
 duration=Duration
@@ -133,6 +135,7 @@ group=Group
 groupName=Group name
 failedToCreateChatRoom=Failed to create chat room with name: {0}.
 failedToJoinChatRoom=Failed to join chat room with name: {0}.
+ffcStatus=Free for chat
 file=&File
 findChatRoomError=Failed to find the "{0}" chat room.
 finish=&Finish
