Fixing documentation (issue #402)
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3193 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/ide/eclipse/README
+++ b/ide/eclipse/README
@@ -9,6 +9,6 @@ In order to use it do:
 		cp .classpath ../../
 
 	b) Under Windows:
-		copy .project ../../
-		copy .classpath ../../
+		copy .project ..\..\
+		copy .classpath ..\..\
 3) Start Eclipse
