Updated Debian package: * Updated dependancies to put sun-jre as a first alternative where needed * Updated application categories in sip-communicator.desktop file * Put SC bundles and libraries in /usr/lib instead of /usr/share * Added a verbose and help option to launch script and updated man page   accordingly * Remove subversion info files from native lib dir
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3309 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/debian/sip-communicator.1
+++ b/resources/install/debian/sip-communicator.1
@@ -16,7 +16,7 @@
 .\" .sp <n>    insert n+1 empty lines
 .\" for manpage-specific macros, see man(7)
 .SH NAME
-SIP Communicator \- the Java VoIP and Instant Messaging client
+sip-communicator \- the Java VoIP and Instant Messaging client
 .SH SYNOPSIS
 .B sip-communicator
 .RI [ options ]
@@ -33,16 +33,16 @@ conversations over the Internet through the SIP protocol, as well as chat with
 your friends using some of the most popular instant messaging protocols such as
 SIP/SIMPLE, Jabber, AIM/ICQ, MSN, Yahoo, IRC and others.
 .SH OPTIONS
-.\" These programs follow the usual GNU command line syntax, with long
-.\" options starting with two dashes (`-').
-.\" A summary of options is included below.
-.\" For a complete description, see the Info files.
-.\" .TP
-.\" .B \-h, \-\-help
-.\" Show summary of options.
-.\" .TP
+.TP
+.B \-h, \-\-help
+Show summary of options.
+.TP
+.B \-v, \-\-verbose
+SIP communicator logs are displayed in the console.
+.TP
 .B \-V, \-\-version
 Show version of program.
+.TP
 .SH FILES
 .TP
 .I ~/.sip-communicator/contactlist.xml
