--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -66,6 +66,8 @@ banFailed=Ban failed
 banFailedGeneralError=Failed to ban {0}. A general server error occured.
 banFailedNotAllowed=Failed to ban {0}. The owner and the administratior of the room could not be banned.
 banFailedNotEnoughPermissions=Failed to ban {0}. You don't have enough privileges to do that.
+brbMessage=I'm gone right now, but I'll be back.
+busyMessage=Sorry, I'm busy right now.
 call=Call
 callVia=Call via:
 callList=Call list
@@ -199,15 +201,18 @@ networkFailure=Network failure
 next=&Next
 new=&New
 newAccount=&New account
+newMessage=New message...
 newName=New name:
+newStatusMessage=New status message
 no=No
 noAccountFound=In order to use the SIP-Communicator you need at least one registered account. The following pages will guide you through the process of creating an account.
 noAvailableRooms=The list of rooms for this server is currently not available.
+noMessage=No message
 noMultiChatAccountAvailable=No accounts, supporting multi user chat found. Check sip-communicator.org for more information on which protocols support multi user chat.
 nonEmptyChatWindowClose=You're trying to close a chat with a non-sent message. Are you sure you want to close this chat?
 nonExistingUserId=The {0} server does not recognize specified user id.
 notifications=Notifications
-ok=&OK
+ok=&Ok
 offline=Offline
 olderCalls=Older calls
 online=Online
@@ -263,6 +268,7 @@ sendFile=S&end file
 selectContactSupportingInfo=There is no info for this contact.
 sendMessage=&Send a message
 sendVia=Send via
+setStatusMessage=Set status message
 settings=&Settings
 showCallPanel=Show call panel
 showChannelsList=Show channels list
@@ -273,6 +279,7 @@ soundOnOff=Turn sound on/off
 statusChangedChatMessage=has become {0}
 statusChangeGeneralError=Failed to change status for account: User name: {0}, Server name: {1}, due to a general error.
 statusChangeNetworkFailure=Failed to change status for account: User name: {0}, Server name: {1}, due to a network problem.
+statusMessageInfo=In the field below you can specify the new message you would like to use.
 subject=Subject
 summary=Summary
 today=Today
