1. Fix including resources in swing and branding bundles
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3344 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -189,6 +189,7 @@ moveSubcontactMsg=Select the contact, where you would like to move.
 moveSubcontact=M&ove Subcontact
 moveSubcontactInSameContact=The contact you have choosen is the same as \n the source one. Please choose another contact!
 moveToGroup=&Move to group
+moveContactError=&Contact cannot be moved
 msgDeliveryFailure=The above message could not be delivered
 msgDeliveryOfflineNotSupported=The protocol you are using doesn't support offline messages. You could try to reach this contact through another protocol or wait until he/she becomes online.
 msgDeliveryInternalError=An internal error occured. This is most probably a bug. Please report it here: http://www.sip-communicator.org/index.php/Development/BugsAndIssues
