Update of the German Translations for the Systray (especially updated the path's for the resources)
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3361 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/systray/resources_de.properties
+++ b/src/net/java/sip/communicator/impl/systray/resources_de.properties
@@ -5,20 +5,21 @@
 
 # German translation
 # Author: Thomas Hofer
-trayIcon=net/java/sip/communicator/impl/systray/resources/systrayIcon.png
-trayIconWindows=net/java/sip/communicator/impl/systray/resources/systrayIconWindows.png
-trayIconMacOSX=net/java/sip/communicator/impl/systray/resources/systrayIconMacOSX.png
-trayIconMacOSXWhite=net/java/sip/communicator/impl/systray/resources/systrayIconMacOSXWhite.png
-addContactIcon=net/java/sip/communicator/impl/systray/resources/addContactIcon.png
-statusMenuIcon=net/java/sip/communicator/impl/systray/resources/statusIcon.png
-settingsMenuIcon=net/java/sip/communicator/impl/systray/resources/configureIcon.png
-closeMenuIcon=net/java/sip/communicator/impl/systray/resources/quit.png
-sipLogo=net/java/sip/communicator/impl/systray/resources/sipLogo.png
-sipLogoOffline=net/java/sip/communicator/impl/systray/resources/sipLogoOffline.png
-messageIcon=net/java/sip/communicator/impl/systray/resources/envelope.png
-messageIconWindows=net/java/sip/communicator/impl/systray/resources/envelope.png
-messageIconMacOSX=net/java/sip/communicator/impl/systray/resources/envelopeMacOSX.png
-messageIconMacOSXWhite=net/java/sip/communicator/impl/systray/resources/envelopeMacOSXWhite.png
+trayIcon=resources/images/impl/systray/systrayIcon.png
+trayIconWindows=resources/images/impl/systray/systrayIconWindows.png
+trayIconMacOSX=resources/images/impl/systray/systrayIconMacOSX.png
+trayIconMacOSXWhite=resources/images/impl/systray/systrayIconMacOSXWhite.png
+addContactIcon=resources/images/impl/gui/buttons/addContactIcon.png
+statusMenuIcon=resources/images/impl/systray/statusIcon.png
+settingsMenuIcon=resources/images/impl/gui/buttons/configureIcon.png
+closeMenuIcon=resources/images/impl/systray/quit.png
+sipLogo=resources/images/impl/systray/sipLogo.png
+sipLogoOffline=resources/images/impl/systray/sipLogoOffline.png
+messageIcon=resources/images/impl/systray/envelope.png
+messageIconWindows=resources/images/impl/systray/envelopeWindows.png
+messageIconMacOSX=resources/images/impl/systray/envelopeMacOSX.png
+messageIconMacOSXWhite=resources/images/impl/systray/envelopeMacOSXWhite.png
+newStatusMessageIcon=resources/images/impl/gui/common/renameDialogIcon.png
 settings=Einstellungen...
 addContact=Kontakt hinzufügen...
 setStatus=Status
@@ -27,3 +28,13 @@ onlineStatus=Online
 offlineStatus=Offline
 messageReceived=Nachricht erhalten von
 failedToLoadAddContactDialog=Der "Kontakt hinzufügen"-Dialog konnte nicht gestartet werden.
+systrayToolTip=SIP Communicator
+setStatusMessage=Setze Statusnachricht
+newStatusMessage=Neue Statusnachricht
+statusMessageInfo=Im Eingabefeld können Sie die neue Statusnachricht angeben.
+noMessage=Keine Nachricht.
+newMessage=Neue Nachricht...
+busyMessage=Ich bin gerade beschäftigt.
+brbMessage=Ich bin gerade nicht da, komme aber wieder.
+ok=&Ok
+cancel=&Abbrechen
