--- a/src/net/java/sip/communicator/impl/systray/resources_de.properties
+++ b/src/net/java/sip/communicator/impl/systray/resources_de.properties
@@ -21,20 +21,21 @@ messageIconMacOSX=resources/images/impl/systray/envelopeMacOSX.png
 messageIconMacOSXWhite=resources/images/impl/systray/envelopeMacOSXWhite.png
 newStatusMessageIcon=resources/images/impl/gui/common/renameDialogIcon.png
 settings=Einstellungen...
-addContact=Kontakt hinzufÃ¼gen...
+addContact=Kontakt hinzufügen...
 setStatus=Status
-close=SchlieÃŸen
+close=Schließen
 onlineStatus=Online
 offlineStatus=Offline
 messageReceived=Nachricht erhalten von
-failedToLoadAddContactDialog=Der "Kontakt hinzufÃ¼gen"-Dialog konnte nicht gestartet werden.
+failedToLoadAddContactDialog=Der "Kontakt hinzufügen"-Dialog konnte nicht gestartet werden.
 systrayToolTip=SIP Communicator
 setStatusMessage=Setze Statusnachricht
 newStatusMessage=Neue Statusnachricht
-statusMessageInfo=Im Eingabefeld kÃ¶nnen Sie die neue Statusnachricht angeben.
+statusMessageInfo=Im Eingabefeld können Sie die neue Statusnachricht angeben.
 noMessage=Keine Nachricht.
 newMessage=Neue Nachricht...
-busyMessage=Ich bin gerade beschÃ¤ftigt.
+busyMessage=Ich bin gerade beschäftigt.
 brbMessage=Ich bin gerade nicht da, komme aber wieder.
 ok=&Ok
 cancel=&Abbrechen
+
