Send SMS interface.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3366 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -265,9 +265,12 @@ selectProvidersForChatRoom=The list below contains all accounts that support the
 selectProvidersWizard=The list below contains all registered accounts. Select these one you would like to use to communicate with the new contact.
 selectProvidersWizardTitle=Select account(s)
 send=&Send
-sendFile=S&end file
+sendFile=Send &file
 selectContactSupportingInfo=There is no info for this contact.
 sendMessage=&Send a message
+sendAsSms=Send as SMS
+sendSms=S&end SMS
+sendSmsNotSupported=The protocol you have selected doesn't support SMS messages.
 sendVia=Send via
 setStatusMessage=Set status message
 settings=&Settings
